--- a/post.hbs
+++ b/post.hbs
@@ -16,17 +16,17 @@
               </div>
               <div class="card-body">
                 <div class="container">
+                  <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
+                  <p>
+                    {{content}}
+                  </p>
                   <div class="tags-area">
-                    <span href="{{url}}" class="text-danger">
+                    <span href="{{url}}">
                       <b>
                         {{tags}}
                       </b>
                     </span>
                   </div>
-                  <a class="card-title" target="_blank" href="{{ url }}" >{{title}}</a>
-                  <p>
-                    {{content}}
-                  </p>
                 </div>
               </div>
             </div>
