--- a/index.hbs
+++ b/index.hbs
@@ -34,8 +34,8 @@
   </div>
   <div class="section-search mr-auto ml-auto">
     <div class="form-group form-search">
-      <input name="q" id="my-custom-input" class="form-control form-control-search" placeholder="Search products">
-      <button type="submit" name="button" class="btn btn-white btn-round btn-submit" id="my-custom-button" onclick="onClick('#my-custom-input')">
+      <input name="q" id="my-custom-input" class="form-control form-control-search" placeholder="Search products"  autocomplete="off">
+      <button type="submit" name="button" class="btn btn-white btn-round btn-submit" id="my-custom-button">
         <i class="icon-search fa fa-search"></i>
       </button>
       <div id="my-custom-results"></div>
@@ -58,16 +58,3 @@
     </div>
   </div>
 </main>
-<script type="text/javascript">
-  function onClick(elem) {
-    let url = [location.protocol, '//', location.host].join('');
-    var $this = $(elem);
-    var val = $this.val();
-    if (val == '') {
-      console.log('no input');
-    } else {
-      url = url + '/tag/' + val;
-      window.location.href = url;
-    }
-  }
-</script>
