--- a/partials/post-creativetim.hbs
+++ b/partials/post-creativetim.hbs
@@ -1,7 +1,7 @@
 
 <div class="card card-static" id="theme-1">
   <div class="card-header">
-    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')" >
+    <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')" class="card-header-url" >
       <img class="card-img-top" src="{{asset "img/material-dashboard-pro-angular.jpg"}}">
       </img>
     </a>
@@ -20,7 +20,7 @@
 
 <div class="card card-static" id="theme-2">
   <div class="card-header">
-    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
+    <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')"  class="card-header-url">
       <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}"></img>
     </a>
   </div>
