--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -1,7 +1,7 @@
 <div class="sidebar-page">
   <div class="card" id="theme-3">
     <div class="card-header">
-      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')" >
+      <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')"  class="card-header-url">
         <img class="card-img-top" src="{{asset "img/material-dashboard-pro-angular.jpg"}}"></img>
       </a>
     </div>
@@ -20,7 +20,7 @@
 
   <div class="card" id="theme-4">
     <div class="card-header">
-      <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')" >
+      <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')"  class="card-header-url">
         <img class="card-img-top" src="{{asset "img/light-bootstrap-dashboard-angular.jpg"}}"></img>
       </a>
     </div>
