feature/changed navbar background on scroll

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -41,9 +41,9 @@
   function yScroll(){
     nav = $('#nav');
     yPos = window.pageYOffset;
-    nav.removeClass("bg-light");
+    nav.removeClass("bg-white");
     if(yPos > 150){
-        nav.addClass("bg-light");
+        nav.addClass("bg-white");
     }
   }
   window.addEventListener("scroll", yScroll);
