--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -15,3 +15,5 @@ $card-border-radius: 10px;
 $card-title: #3C4858;
 
 $shadow-default: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
+
+$shadow-navbar: 0 15px 30px 0 rgba(#3C4858, 0.05);
