--- a/assets/scss/_code-fund.scss
+++ b/assets/scss/_code-fund.scss
@@ -39,8 +39,8 @@
       display: none;
     }
   }
-  img{
-    width: 100px;
+  .cf-img{
+    width: 100px !important;
     height: 100px;
     margin-top: 0 !important;
     margin-bottom: 8px;
