--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -20,7 +20,7 @@ a{
   width: 1100px;
   position: absolute;
   margin-top: -60px;
-  right: -2px;
+  right: 0;
   z-index: -1;
 }
 .margin-100{
@@ -35,4 +35,8 @@ a{
   position: absolute;
   z-index: -1;
   top: -65px;
+}
+.form-control:focus{
+ outline:none;
+ box-shadow: none;
 }
