--- a/assets/scss/custom/_navbar.scss
+++ b/assets/scss/custom/_navbar.scss
@@ -19,7 +19,7 @@
   }
   .navbar-brand{
     font-weight: lighter;
-    margin-top: 2px;
+    margin-bottom: -3px;
     img{
       position: relative;
       top: -3px;
