--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -32,15 +32,6 @@
         </p>
       </div>
       <div class="col-md-3">
-        <h5 class="footer-title">Links</h5>
-        <ul class="nav flex-column list-unstyled">
-          <li class="nav-item"><a target="_blank" href="https://angular.io/">Official Website</a></li>
-          <li class="nav-item"><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
-          <li class="nav-item"><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
-          <li class="nav-item"><a target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
-        </ul>
-      </div>
-      <div class="col-md-2">
         <h5 class="footer-title">About us</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/blog/">Blog</a></li>
@@ -49,7 +40,7 @@
 
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-3">
         <h5 class="footer-title">More Information</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/advertise/">Advertise</a></li>
@@ -57,11 +48,13 @@
           <li class="nav-item"><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit product</a></li>
         </ul>
       </div>
-      <div class="col-md-2">
-        <h5 class="footer-title">Special Thanks</h5>
+      <div class="col-md-3">
+        <h5 class="footer-title">Links</h5>
         <ul class="nav flex-column list-unstyled">
-          <li class="nav-item"><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
-          <li class="nav-item"><a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></li>
+          <li class="nav-item"><a target="_blank" href="https://angular.io/">Official Website</a></li>
+          <li class="nav-item"><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
+          <li class="nav-item"><a target="_blank" href="https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321"  onClick="ga('send', 'event', 'Outbound', 'Footer', 'https://www.creative-tim.com/bootstrap-themes/angular-dashboard/?partner=93321')">Angular Templates</a></li>
+          <li class="nav-item"><a target="_blank" href="https://github.com/expojs/angularexpo">Github Angular Expo</a></li>
         </ul>
       </div>
     </div>
@@ -82,6 +75,7 @@
         </li>
       </ul>
       <p class="text-center">Copyright © 2019 Angular Expo. All Rights Reserved.</p>
+      <p class="text-center">Special Thanks to <a href="https://iradesign.io/?ref=angularexpo">IRA Design</a> and <a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></p>
     </div>
 
   </div>
