--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="row pt-5 pl-5 pr-5 responsive-footer">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="d-flex">
           <img src="{{asset "img/logo/angular.png"}}" alt="angular" class="footer-img">
           <h5 class="footer-title">Angular Expo</h5>
@@ -31,7 +31,7 @@
           Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework. Angular Expo has over 75+ AngularJS examples, including demos.
         </p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <h5 class="footer-title">About us</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/blog/">Blog</a></li>
@@ -49,7 +49,7 @@
         </ul>
       </div>
       <div class="col-md-3">
-        <h5 class="footer-title">Links</h5>
+        <h5 class="footer-title">Useful Links</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a target="_blank" href="https://angular.io/">Official Website</a></li>
           <li class="nav-item"><a target="_blank" href="https://angular.io/docs/js/latest/">Official Documentation</a></li>
@@ -58,6 +58,7 @@
         </ul>
       </div>
     </div>
+    <p class="special-thanks text-center">Special Thanks to <b><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></b> and <b><a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></b></p>
     <hr>
     <div class="social-area ml-auto mr-auto">
       <ul class="footer-social ml-auto mr-auto justify-content-center">
@@ -75,7 +76,6 @@
         </li>
       </ul>
       <p class="text-center">Copyright © 2019 Angular Expo. All Rights Reserved.</p>
-      <p class="text-center">Special Thanks to <a href="https://iradesign.io/?ref=angularexpo">IRA Design</a> and <a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></p>
     </div>
 
   </div>
