feature/add font-size-default variable

--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -1,7 +1,7 @@
 body{
   background-color: $background-color;
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-size: $font-size-default;;
   line-height: 1.428571429;
 }
 a{
