--- a/assets/scss/custom/_navbar.scss
+++ b/assets/scss/custom/_navbar.scss
@@ -28,7 +28,7 @@
   .nav-social{
     list-style: none;
     .nav-item .btn{
-      font-size: 14px;
+      font-size: $font-size-default;;
       padding: 9px 24px;
       border: none;
     }
