--- a/assets/scss/custom/_buttons.scss
+++ b/assets/scss/custom/_buttons.scss
@@ -6,7 +6,7 @@
   background-color: #223464;
   color: #FFFFFF;
   border-radius: 30px;
-  font-size: 14px;
+  font-size: $font-size-default;;
   padding: 10px 24px;
   text-transform: uppercase;
 
@@ -25,7 +25,7 @@
 
 .btn-danger{
   border-radius: 30px;
-  font-size: 14px;
+  font-size: $font-size-default;;
   padding: 10px 24px;
   text-transform: uppercase;
 
@@ -40,7 +40,7 @@
 
 .btn-outline-danger{
   border-radius: 30px;
-  font-size: 14px;
+  font-size: $font-size-default;;
   padding: 10px 24px;
   text-transform: uppercase;
   color: $button-default;
