--- a/assets/scss/custom/_card.scss
+++ b/assets/scss/custom/_card.scss
@@ -87,7 +87,7 @@
         text-transform: uppercase;
       }
       .text-danger{
-        font-size: 14px;
+        font-size: $font-size-default;;
       }
     }
 
@@ -102,7 +102,7 @@
     }
 
     .card-text{
-      font-size: 14px;
+      font-size: $font-size-default;;
       color: #999999;
       font-weight: lighter;
       line-height: 24px;
