--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -38,7 +38,7 @@
         color: $text-primary;
         border: none;
         border-bottom: 1px solid #D8D8D8;
-        font-size: 14px;
+        font-size: $font-size-default;;
         width: 60%;
         border-radius: 0;
         padding: 0;
