--- a/assets/scss/custom/_footer.scss
+++ b/assets/scss/custom/_footer.scss
@@ -13,7 +13,7 @@
 
    .float-buttons{
      display: block;
-     background-color: #fff;
+     background-color: $white-color;
      border-radius: 50%;
      box-shadow: $shadow-default;
      height: 80px;
