--- a/assets/scss/custom/_sidebar.scss
+++ b/assets/scss/custom/_sidebar.scss
@@ -83,7 +83,7 @@
       color: $button-default;
 
       &:hover{
-        color: #ffffff;
+        color: $white-color;
       }
     }
     .clear{
