--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -26,7 +26,7 @@
       display: flex;
       box-shadow: $shadow-default;
       padding: 10px;
-      background: #ffffff;
+      background: $white-color;
 
       i{
         font-size: 20px;
@@ -55,7 +55,7 @@
         padding-bottom: 8px;
         font-weight: 200;
         background: $brand-state;
-        color: #ffffff;
+        color: $white-color;
       }
     }
   }
