--- a/assets/scss/custom/_sections.scss
+++ b/assets/scss/custom/_sections.scss
@@ -43,7 +43,7 @@
 
   #my-custom-results{
     background-color: $white-color;
-    border-radius: 6px;
+    border-radius: $border-radious-default;
     width: auto;
     max-width: 250px;
     margin-top: 10px;
