--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -22,3 +22,5 @@ $shadow-navbar: 0 15px 30px 0 rgba(#3C4858, 0.05);
 $font-size-default: 14px;
 
 $border-radious-default: 6px;
+
+$buttons-padding: $buttons-padding;
