--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -23,4 +23,5 @@ $font-size-default: 14px;
 
 $border-radious-default: 6px;
 
-$buttons-padding: $buttons-padding;
+$buttons-padding: 10px 24px;
+$button-border-radious: 30px;
