--- a/assets/scss/custom/_subscribe-area.scss
+++ b/assets/scss/custom/_subscribe-area.scss
@@ -47,7 +47,7 @@
         position: absolute;
         right: 12px;
         border: none;
-        border-radius: 30px;
+        border-radius: $button-border-radious;
         display: block;
         padding-left: 28px;
         padding-right: 28px;
