--- a/assets/scss/custom/_variables.scss
+++ b/assets/scss/custom/_variables.scss
@@ -14,6 +14,7 @@ $card-border-color: #707070;
 $card-border-radius: 10px;
 
 $card-title: #3C4858;
+$card-height: 550px;
 
 $shadow-default: 0 15px 30px 0 rgba(48, 54, 77, 0.1);
 
