feature/ feedback Elisa

--- a/assets/scss/custom/_buttons.scss
+++ b/assets/scss/custom/_buttons.scss
@@ -38,6 +38,10 @@
   font-size: 21px !important;
 }
 
+.fa-facebook-f{
+  font-size: 18px !important;
+}
+
 .btn-outline-danger{
   border-radius: $button-border-radious;
   font-size: $font-size-default;;
