--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -25,13 +25,13 @@
       <div class="col-md-3">
         <div class="d-flex">
           <img src="{{asset "img/logo/angular.png"}}" alt="angular" class="footer-img">
-          <h5 class="footer-title">Angular Expo</h5>
+          <h5 class="footer-title ml-1">Angular Expo</h5>
         </div>
-        <p class="footer-text">
-          Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework. Angular Expo has over 75+ AngularJS examples, including demos.
+        <p class="footer-text pr-3">
+          Angular Expo is a beautiful showcase of websites, applications and experiments using the Angular JavaScript framework.
         </p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <h5 class="footer-title">About us</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/blog/">Blog</a></li>
@@ -40,12 +40,19 @@
 
         </ul>
       </div>
-      <div class="col-md-3">
-        <h5 class="footer-title">More Information</h5>
+      <div class="col-md-2">
+        <h5 class="footer-title">More Info</h5>
         <ul class="nav flex-column list-unstyled">
           <li class="nav-item"><a href="{{@site.url}}/advertise/">Advertise</a></li>
           <li class="nav-item"><a href="#" onclick="dialog.showModal();return false;">Newsletter</a></li>
           <li class="nav-item"><a href="https://docs.google.com/forms/d/1I_FAai7Z5VFpZvOxFS68yZsCDsAngnOknIqzCwbBjE0" target="_blank">Submit product</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <h5 class="footer-title">Special Thanks</h5>
+        <ul class="nav flex-column list-unstyled">
+          <li class="nav-item"><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></li>
+          <li class="nav-item"><a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></li>
         </ul>
       </div>
       <div class="col-md-3">
@@ -58,7 +65,6 @@
         </ul>
       </div>
     </div>
-    <p class="special-thanks text-center">Special Thanks to <b><a href="https://iradesign.io/?ref=angularexpo">IRA Design</a></b> and <b><a href="https://www.creative-tim.com/templates/angular?partner=93321">Creative Tim</a></b></p>
     <hr>
     <div class="social-area ml-auto mr-auto">
       <ul class="footer-social ml-auto mr-auto justify-content-center">
