--- a/partials/post-creativetim0.hbs
+++ b/partials/post-creativetim0.hbs
@@ -12,7 +12,7 @@
         <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Material Dashboard Pro</a>
       </div>
     </div>
-    <div class="card-footer">
+    <div class="card-footer text-center">
       <a target="_blank" href="https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/material-dashboard-pro-angular2/?partner=93321')">Download</a>
 
     </div>
@@ -31,7 +31,7 @@
         <a class="card-title" target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321" rel="noopener" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Light Bootstrap Dashboard Pro</a>
       </div>
     </div>
-    <div class="card-footer">
+    <div class="card-footer text-center">
       <a target="_blank" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321"  class="btn btn-outline-danger btn-round btn-sm" onclick="ga('send', 'event', 'Outbound', 'Home', 'https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-angular2/?partner=93321')">Download</a>
 
     </div>
