--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7373,6 +7373,9 @@ a {
 .fa-github, .fa-twitter {
   font-size: 21px !important; }
 
+.fa-facebook-f {
+  font-size: 18px !important; }
+
 .btn-outline-danger {
   border-radius: 30px;
   font-size: 14px;
@@ -7455,9 +7458,6 @@ a {
   .card-subscribe .card-body .clear {
     margin-top: 30px; }
 
-.sidebar-page .card {
-  align-items: center; }
-
 .footer {
   background-color: #FCFCFF;
   padding-top: 45px; }
@@ -7511,7 +7511,8 @@ a {
       text-transform: uppercase;
       color: #223464; }
   .footer .special-thanks {
-    color: #223464; }
+    color: #223464;
+    margin: 30px 0; }
 
 @media (max-width: 576px) {
   .footer .responsive-footer div {
