--- a/assets/scss/custom/_misc.scss
+++ b/assets/scss/custom/_misc.scss
@@ -40,3 +40,10 @@ a{
  outline:none;
  box-shadow: none;
 }
+.white-space{
+  background-color: #fdfcff;
+  width: 10000px;
+  height: 558px;
+  position: absolute;
+  right: -9990px;
+}
