--- a/index.hbs
+++ b/index.hbs
@@ -1,7 +1,6 @@
 {{!< layouts/default}}
 
 <main role="main">
-  <img src="{{asset "/img/illustratio_header.svg"}}" alt="asd" class="image-svg d-lg-block d-none">
 
   <div class="section section-header">
     <div class="container">
@@ -28,6 +27,10 @@
           </div>
         </div>
         <div class="col-lg-8 d-lg-block d-none">
+          <img src="{{asset "/img/illustratio_header.svg"}}" alt="asd" class="image-svg d-lg-block d-none">
+          <div class="white-space">
+
+          </div>
         </div>
       </div>
     </div>
